Add Firebase Notification